Feat: switch/case y operador ternario

--- a/js-03-control_flow/index.html
+++ b/js-03-control_flow/index.html
@@ -44,8 +44,13 @@
     <section class="row align-items-center justify-content-center" id="main-content">
       <!-- logo -->
       <figure class="col-lg-5 col-9">
-        <img class="img-fluid rounded" src="./public/images/dino.jpg" alt="Dinosaurio rex escribiendo código" />
+        <img id="imagen-emocion" class="img-fluid rounded" src="./public/images/dino.jpg" alt="Dinosaurio rex escribiendo código" />
       </figure>
+      <label for="emocion">Elige una emoción:</label>
+      <select id="emocion" class="emocion">
+        <option value="feliz">Feliz</option>
+        <option value="triste">Triste</option>
+      </select>
       <!-- principal title -->
       <div class="col-lg-3 col-12 text-warning">
         <h1 id="title">JS 03</h1>
